--- a/Final Project RMD.Rmd
+++ b/Final Project RMD.Rmd
@@ -10,22 +10,18 @@ bibliography: BIOL3140.Rtists.finalproj.bib
 knitr::opts_chunk$set(echo = FALSE, message = FALSE)
 ```
 
-## R Markdown
+## Introduction 
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
+## Methods
 
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
+## Results
 
-```{r cars}
-summary(cars)
-```
+## Discussion 
 
-## Including Plots
+## Author Contributions 
+Michael Britt - 
+Phoebe Chandler - 
+Ellie Falanga - 
+Erin Kiley - 
+## References 
 
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
-```
-
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
